...
            onClick = {
                viewModel.authenticate(email, password)
            },
            modifier = modifier
                .fillMaxWidth(),
        ) {
            Text("Connexion")
        }

        if (errorMessage != null) {
            Text(errorMessage!!, color = MaterialTheme.colorScheme.error,
                modifier = Modifier.padding(top = 8.dp))
        }
...
